src/app/shared/shell/shell.component.scss
.sidenav-container{
  height: 100%;
}

.logo {
  font-size: 1.2rem;
  cursor: pointer;
  outline: none;
}

.mat-drawer-side {
  border: none;
  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.3);
}

.sidenav {
  width: 200px;
  font-family: sofia-pro;
}

.sidenav .mat-toolbar {
  background: inherit;
}

.mat-toolbar.mat-primary {
  position: sticky;
  top: 0;
  z-index: 1;
}

.fill-space {
  flex: 1 1 auto;
}

// i {
//   font-style: normal;
//   font-size: 1.25em;
//   margin-right: 16px;
// }

// .avatar {
//   width: 1.75em;
//   border-radius: 50%;
//   margin: 0 10px 5px;
// }

